--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "dotenv": "^16.4.4",
         "eslint": "8.47.0",
         "eslint-config-next": "13.4.19",
+        "express": "^4.18.2",
+        "mongoose": "^7.4.4",
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0",
