--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.6.7",
         "dotenv": "^16.4.4",
         "eslint": "8.47.0",
         "eslint-config-next": "13.4.19",
