--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-helmet-async": "^2.0.4",
+        "stripe": "^14.21.0",
         "styled-components": "^6.1.8"
     },
     "devDependencies": {
