--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "eslint": "8.47.0",
         "eslint-config-next": "13.4.19",
         "express": "^4.18.2",
+        "login": "^0.8.0",
+        "micro": "^10.0.1",
         "mongoose": "^7.4.4",
         "next": "13.4.19",
         "react": "18.2.0",
