--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "micro": "^10.0.1",
         "mongoose": "^7.4.4",
         "next": "13.4.19",
+        "next-auth": "^4.24.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-helmet-async": "^2.0.4",
