--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@auth/mongodb-adapter": "^3.1.0",
-        "@next-auth/mongodb-adapter": "^1.1.3",
         "axios": "^1.6.7",
         "dotenv": "^16.4.4",
         "eslint": "8.47.0",
@@ -18,6 +16,7 @@
         "express": "^4.18.2",
         "login": "^0.8.0",
         "micro": "^10.0.1",
+        "mongodb": "^6.6.1",
         "mongoose": "^7.4.4",
         "next": "13.4.19",
         "next-auth": "^4.24.7",
