--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@types/styled-components": "^5.1.34",
         "axios": "^1.6.7",
         "dotenv": "^16.4.4",
         "eslint": "8.47.0",
@@ -24,9 +25,10 @@
         "react-dom": "18.2.0",
         "react-helmet-async": "^2.0.4",
         "stripe": "^14.21.0",
-        "styled-components": "^6.1.8"
+        "styled-components": "^6.1.11"
     },
     "devDependencies": {
-        "@types/sortablejs": "^1.15.2"
+        "@types/sortablejs": "^1.15.2",
+        "babel-plugin-styled-components": "^2.1.4"
     }
 }
